--- a/packages/nr8-dashboard/stories/Button.stories.mdx
+++ b/packages/nr8-dashboard/stories/Button.stories.mdx
@@ -1,9 +1,51 @@
-import { ArgsTable, Canvas, Meta, Story } from '@storybook/addon-docs'
+import {
+  ArgsTable,
+  Title,
+  Subtitle,
+  Description,
+  Canvas,
+  Meta,
+  Story,
+  Source
+} from '@storybook/addon-docs'
+
+import { expect, test } from '@storybook/jest'
+import { screen, userEvent, within } from '@storybook/testing-library'
+import dd from 'ts-dedent'
+
 import { Button } from '../components/buttons/button'
 
-<Meta title="Button" component={Button} />
+<Meta
+  title="Fruit/Bananas/Button"
+  argTypes={{
+    label: {
+      control: {
+        type: 'select'
+      },
+      options: ['Primary', 'Apple', 'Banana', 'Carrot', 'Dragon'],
+      table: {
+        type: {
+          summary: 'The label contents',
+          detail: 'Text displayed by the Badge'
+        },
+        defaultValue: {
+          summary: 'Bananas',
+          defailt: 'The shit is bananananananans'
+        }
+      }
+    },
+    onClick: {
+      table: {
+        category: 'events'
+      }
+    }
+  }}
+  component={Button}
+/>
 
-# Buttons
+<Title />
+<Subtitle />
+<Description />
 
 <ArgsTable of={Button} />
 
@@ -11,17 +53,48 @@ import { Button } from '../components/buttons/button'
 
 Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.
 
+- [Primary](#primary-button)
+- [Secondary](#secondary-button)
+- [Large](#large-button)
+- [Small](#small-button)
+
+export const someFunction = (someValue) => {
+  return `i am a ${someValue}`
+}
+
+<Source
+  language="css"
+  code={dd`
+    .container {
+      display: grid | inline-grid;
+    }
+  `}
+/>
+
 <Canvas>
   <Story
     name="Primary"
     args={{
       primary: true,
-      label: 'Primary'
+      label: 'Bold'
+    }}
+    play={async ({ args, canvasElement }) => {
+      const canvas = within(canvasElement)
+      const button = canvas.getByRole('button')
+      console.log(button)
+      await userEvent.click(canvas.getByRole('button'))
+      await expect(args.onClick).toHaveBeenCalled()
     }}
   >
-    {(args) => <Button {...args} />}
+    {(args) => {
+      const { label } = args
+      const functionResult = someFunction(label)
+      return <Button {...args} label={functionResult} />
+    }}
   </Story>
 </Canvas>
+
+<ArgsTable story="Primary" />
 
 ## Secondary button
 
